--- a/WebApplication2/GigHub.csproj
+++ b/WebApplication2/GigHub.csproj
@@ -205,8 +205,18 @@
     <Compile Include="Migrations\201608211944360_initialModel.Designer.cs">
       <DependentUpon>201608211944360_initialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201608212028586_createGigTable.cs" />
+    <Compile Include="Migrations\201608212028586_createGigTable.Designer.cs">
+      <DependentUpon>201608212028586_createGigTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201608221150097_overrideConventionsForGigsAndGenres.cs" />
+    <Compile Include="Migrations\201608221150097_overrideConventionsForGigsAndGenres.Designer.cs">
+      <DependentUpon>201608221150097_overrideConventionsForGigsAndGenres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\Gig.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -289,6 +299,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201608211944360_initialModel.resx">
       <DependentUpon>201608211944360_initialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608212028586_createGigTable.resx">
+      <DependentUpon>201608212028586_createGigTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608221150097_overrideConventionsForGigsAndGenres.resx">
+      <DependentUpon>201608221150097_overrideConventionsForGigsAndGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
