--- a/WebApplication2/GigHub.csproj
+++ b/WebApplication2/GigHub.csproj
@@ -220,6 +220,14 @@
     <Compile Include="Migrations\201608221232356_populateGendreTable.Designer.cs">
       <DependentUpon>201608221232356_populateGendreTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201608312058321_addForiegnKeyPropertiesToGig.cs" />
+    <Compile Include="Migrations\201608312058321_addForiegnKeyPropertiesToGig.Designer.cs">
+      <DependentUpon>201608312058321_addForiegnKeyPropertiesToGig.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201608312110155_addForeignKeyPropertiesToGig.cs" />
+    <Compile Include="Migrations\201608312110155_addForeignKeyPropertiesToGig.Designer.cs">
+      <DependentUpon>201608312110155_addForeignKeyPropertiesToGig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Genre.cs" />
@@ -228,7 +236,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\GigFormViewModel.cs" />
+    <Compile Include="Models\ViewModels\GigFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\aspnet-WebApplication2-20160821123808.mdf" />
@@ -317,6 +325,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201608221232356_populateGendreTable.resx">
       <DependentUpon>201608221232356_populateGendreTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608312058321_addForiegnKeyPropertiesToGig.resx">
+      <DependentUpon>201608312058321_addForiegnKeyPropertiesToGig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608312110155_addForeignKeyPropertiesToGig.resx">
+      <DependentUpon>201608312110155_addForeignKeyPropertiesToGig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
