--- a/WebApplication2/GigHub.csproj
+++ b/WebApplication2/GigHub.csproj
@@ -228,12 +228,18 @@
     <Compile Include="Migrations\201608312110155_addForeignKeyPropertiesToGig.Designer.cs">
       <DependentUpon>201608312110155_addForeignKeyPropertiesToGig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201608312218185_lastEdit.cs" />
+    <Compile Include="Migrations\201608312218185_lastEdit.Designer.cs">
+      <DependentUpon>201608312218185_lastEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\Gig.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ViewModels\FeatureDate.cs" />
+    <Compile Include="Models\ViewModels\ValidTime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Models\ViewModels\GigFormViewModel.cs" />
@@ -331,6 +337,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201608312110155_addForeignKeyPropertiesToGig.resx">
       <DependentUpon>201608312110155_addForeignKeyPropertiesToGig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201608312218185_lastEdit.resx">
+      <DependentUpon>201608312218185_lastEdit.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
